# RieszEnergyOptimization

./: CMakeLists.txt  L-BFGS.cpp  L-BFGS_parallel.cpp  L-BFGS_truncated.cpp  README.md  control.inp  main.cpp  min_energy.h  parallel.cpp  solver.cpp
include/cppoptlib/: meta.h
include/cppoptlib/linesearch/: wolfeheuristic__.h
include/cppoptlib/solver/: lbfgssolver.h
